gsjkwebsite/static/css/gsjkwebsite.css
* {
  font-family: arial,tahoma,'Microsoft Yahei','\5b8b\4f53',sans-serif;
}
html {
  font-family: arial,tahoma,'Microsoft Yahei','\5b8b\4f53',sans-serif;
  font-size: 14px;
}
body {
  font-family: arial,tahoma,'Microsoft Yahei','\5b8b\4f53',sans-serif;
}

h5 {
  white-space: nowrap;
}

ol, ul {
	list-style: none;
}

#top-nav-container {
  display: flex;
  justify-content: center;
}

nav {
  border-bottom: 1px solid rgba(90, 69, 69, 0.3);
}
.navbar-light .navbar-nav .nav-link {
  color: #000000;
}

.navbar-nav {
  display: flex;
  align-items: center;
}
.nav-link {
  color: #000000;
  font-weight: 500;
  font-size: larger;
  white-space: nowrap;
}


nav ul li a,
nav ul li a:after,
nav ul li a:before {
  transition: all .5s;
}
nav ul li a:hover {
  color: #555;
}


nav.stroke ul li a,
nav.fill ul li a {
  position: relative;
}
nav.stroke ul li a:after,
nav.fill ul li a:after {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  width: 0%;
  content: '.';
  color: transparent;
  background: #1E2F6D;
  height: 2px;
}
nav.stroke ul li a:hover:after {
  width: 100%;
}

nav.fill ul li a {
  transition: all 2s;
}

nav.fill ul li a:after {
  text-align: left;
  content: '.';
  margin: 0;
  opacity: 0;
}
nav.fill ul li a:hover {
  color: #fff;
  z-index: 1;
}
nav.fill ul li a:hover:after {
  z-index: -10;
  animation: fill 1s forwards;
  -webkit-animation: fill 1s forwards;
  -moz-animation: fill 1s forwards;
  opacity: 1;
}

.search-wrapper {
  display: flex;
}

.search-input {
  margin-bottom: 0;
}

.nav-more {
  left: auto;
}

#carouselExampleIndicators {
  margin-top: 10px;
}

.carousel-control-next-icon, .carousel-control-prev-icon {
  width: 50px;
  height: 50px;
}

.carousel-item {
	height: 100vh;
	min-height: 300px;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	background-size: cover;
}

.carousel-caption {
	color: #ffffff;	
  bottom: 60%;
}

.carousel-caption h1 {
  font-size: 3em;
  letter-spacing: 4px;
}

.carousel-caption h3 {
  font-size: 2em;
  letter-spacing: 12px;
  line-height: 2;
}


.carousel-caption p {
  font-size: 1.8em;
  line-height: 2;
  letter-spacing: 6px;
}

.carousel-caption hr{
	height:1px;
	border-top:1px solid #ffffff;
		
}
 
.caption1 {
	width: 580px;
}

.caption2 {
	width: 420px;
}

.caption3 {
	width: 650px;
}

.milestone {
  background: url('../images/milestonebg.png') no-repeat center center;
  background-size: cover; 
}

/* timeline */

.events li a {
  font-style: italic;
}

.selected em {
  color: #ffffff;
}

.cd-horizontal-timeline {
  opacity: 0;
  margin: 2em auto;
  -webkit-transition: opacity 0.2s;
  -moz-transition: opacity 0.2s;
  transition: opacity 0.2s;
}
.cd-horizontal-timeline::before {
  /* never visible - this is used in jQuery to check the current MQ */
  content: 'mobile';
  display: none;
}
.cd-horizontal-timeline.loaded {
  /* show the timeline after events position has been set (using JavaScript) */
  opacity: 1;
}
.cd-horizontal-timeline .timeline {
  position: relative;
  height: 100px;
  width: 90%;
  max-width: 800px;
  margin: 0 auto;
}
.cd-horizontal-timeline .events-wrapper {
  position: relative;
  height: 100%;
  margin: 0 40px;
  overflow: hidden;
}
.cd-horizontal-timeline .events-wrapper::after, .cd-horizontal-timeline .events-wrapper::before {
  /* these are used to create a shadow effect at the sides of the timeline */
  content: '';
  position: absolute;
  z-index: 2;
  top: 0;
  height: 100%;
  width: 20px;
}
.cd-horizontal-timeline .events-wrapper::before {
  /* left: 0;
  background-image: -webkit-linear-gradient( left , #f8f8f8, rgba(248, 248, 248, 0));
  background-image: linear-gradient(to right, #f8f8f8, rgba(248, 248, 248, 0)); */
}
.cd-horizontal-timeline .events-wrapper::after {
  /* right: 0;
  background-image: -webkit-linear-gradient( right , #f8f8f8, rgba(248, 248, 248, 0));
  background-image: linear-gradient(to left, #f8f8f8, rgba(248, 248, 248, 0)); */
}
.cd-horizontal-timeline .events {
  /* this is the grey line/timeline */
  position: absolute;
  z-index: 1;
  left: 0;
  top: 49px;
  height: 2px;
  /* width will be set using JavaScript */
  background: #dfdfdf;
  -webkit-transition: -webkit-transform 0.4s;
  -moz-transition: -moz-transform 0.4s;
  transition: transform 0.4s;
}
.cd-horizontal-timeline .filling-line {
  /* this is used to create the green line filling the timeline */
  position: absolute;
  z-index: 1;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  background-color: #7b9d6f;
  -webkit-transform: scaleX(0);
  -moz-transform: scaleX(0);
  -ms-transform: scaleX(0);
  -o-transform: scaleX(0);
  transform: scaleX(0);
  -webkit-transform-origin: left center;
  -moz-transform-origin: left center;
  -ms-transform-origin: left center;
  -o-transform-origin: left center;
  transform-origin: left center;
  -webkit-transition: -webkit-transform 0.3s;
  -moz-transition: -moz-transform 0.3s;
  transition: transform 0.3s;
}
.cd-horizontal-timeline .events a {
  position: absolute;
  bottom: 0;
  z-index: 2;
  text-align: center;
  font-size: 1.3rem;
  padding-bottom: 15px;
  color: #383838;
  /* fix bug on Safari - text flickering while timeline translates */
  -webkit-transform: translateZ(0);
  -moz-transform: translateZ(0);
  -ms-transform: translateZ(0);
  -o-transform: translateZ(0);
  transform: translateZ(0);
}
.cd-horizontal-timeline .events a::after {
  /* this is used to create the event spot */
  content: '';
  position: absolute;
  left: 50%;
  right: auto;
  -webkit-transform: translateX(-50%);
  -moz-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  -o-transform: translateX(-50%);
  transform: translateX(-50%);
  bottom: -5px;
  height: 12px;
  width: 12px;
  border-radius: 50%;
  border: 2px solid #dfdfdf;
  background-color: #f8f8f8;
  -webkit-transition: background-color 0.3s, border-color 0.3s;
  -moz-transition: background-color 0.3s, border-color 0.3s;
  transition: background-color 0.3s, border-color 0.3s;
}
/* ... */

